# server-status-client

./: .gitignore  README.md  deploy-cn.sh  deploy.sh  main.py  pyproject.toml  test_tz.py
.github/workflows/: nuitka-compile.yml  pypi-publish.yml
deploy/: server-status-client.service
server_status/: __main__.py  api.py  cmd_parser.py  i18n.py  timezone.py
