[project]
name = "server-status"
dynamic = ["version"]
description = "Server status client"
authors = [
    { name = "snowykami", email = "snowykami@outlook.com" },
]
dependencies = [
    "requests>=2.32.3",
    "psutil>=6.0.0",
    "arclet-alconna>=1.8.30",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
server-status = "server_status.__main__:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'

[[tool.pdm.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"